--- a/DateFirst.Web/index.html
+++ b/DateFirst.Web/index.html
@@ -8,10 +8,11 @@
     <script src="Scripts/sammy.min.js"></script>
     <script src="Scripts/handlebars-v4.0.4.js"></script>
     <script src="Scripts/toastr.min.js"></script>
+    <script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="Content/toastr.min.css" rel="stylesheet" />
-
+    <link href="Content/CustomCss/chat-style.css" rel="stylesheet" />
     <!--Modal window-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="Content/CustomCss/style.css" rel="stylesheet" />
