Fixed gallery UI.

--- a/DateFirst.Web/index.html
+++ b/DateFirst.Web/index.html
@@ -136,6 +136,11 @@
 
         </div>
 
+        <!--Footer-->
+        <!--<div id="footer">
+            Footer Here
+        </div>-->
+
         <!-- Image Gallery scripts -->
         <!--<script src="Scripts/bootstrap-image-gallery.min.js"></script>-->
         <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
