Added page load progress bar

--- a/DateFirst.Web/index.html
+++ b/DateFirst.Web/index.html
@@ -8,11 +8,13 @@
     <script src="Scripts/sammy.min.js"></script>
     <script src="Scripts/handlebars-v4.0.4.js"></script>
     <script src="Scripts/toastr.min.js"></script>
+    <script src="Scripts/pace.js"></script>
     <script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="Content/toastr.min.css" rel="stylesheet" />
-    <link href="Content/CustomCss/chat-style.css" rel="stylesheet" />
+    <link href="Content/CustomCss/chat-style.css" rel="stylesheet"/>
+    <link href="Content/CustomCss/pace-style.css" rel="stylesheet" />
     <!--Modal window-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="Content/CustomCss/style.css" rel="stylesheet" />
@@ -24,7 +26,7 @@
     <!--Image Gallery-->
     <link href="Content/blueimp-gallery.min.css" rel="stylesheet" />
     <link href="Content/bootstrap-image-gallery.min.css" rel="stylesheet" />
-
+    
 </head>
 <body>
     <div id="wrapper">
