Already the user can add and update a profile picture

--- a/DateFirst.Web/index.html
+++ b/DateFirst.Web/index.html
@@ -42,7 +42,7 @@
                 <li class="logout-container">
                     <div class="dropdown" id="user-dropdown">
                         <a href="" class="dropdown-toggle" id="user-image" data-toggle="dropdown">
-                            <img src="http://community.playstarbound.com/data/attachments/61/61716-71ca9c4b63cf4c7405525340e6ac6aaf.jpg" />  
+                            <img id="profile-picture" src="" />  
                             <div id="logged-user-name"></div>                                                  
                         </a>
                         <ul class="dropdown-menu">
