--- a/DateFirst.Web/index.html
+++ b/DateFirst.Web/index.html
@@ -1,20 +1,20 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Date First</title>
     <meta charset="utf-8" />
     <script src="Scripts/jquery-2.1.4.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/sammy.min.js"></script>
     <script src="Scripts/handlebars-v4.0.4.js"></script>
     <script src="Scripts/toastr.min.js"></script>
-    <script src="Scripts/pace.js"></script>
+    <!--<script src="Scripts/pace.js"></script>-->
     <script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="Content/toastr.min.css" rel="stylesheet" />
     <link href="Content/CustomCss/chat-style.css" rel="stylesheet" />
-    <link href="Content/CustomCss/pace-style.css" rel="stylesheet" />
+    <!--<link href="Content/CustomCss/pace-style.css" rel="stylesheet" />-->
     <!--Modal window-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="Content/CustomCss/style.css" rel="stylesheet" />
@@ -32,6 +32,7 @@
     <div id="wrapper">
         <div id="navbar">
             <input type="image" src="Images/cloud button.png" alt="Home" id="home-btn" />
+            <input type="image" src="Images/cloud button profile.png" alt="Home" id="profile-btn" />
             <ul class="nav navbar-nav navbar-right">
                 <li id="sign-in-container" class="login-containers">
                     <a href="#/" data-toggle="modal" data-target="#login-modal"><b>> Login</b></a>
