BAckground,favicon added, refactoring

--- a/DateFirst.Web/index.html
+++ b/DateFirst.Web/index.html
@@ -8,17 +8,17 @@
     <script src="Scripts/sammy.min.js"></script>
     <script src="Scripts/handlebars-v4.0.4.js"></script>
     <script src="Scripts/toastr.min.js"></script>
-    <!--<script src="Scripts/pace.js"></script>-->
     <script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="Content/toastr.min.css" rel="stylesheet" />
     <link href="Content/CustomCss/chat-style.css" rel="stylesheet" />
-    <!--<link href="Content/CustomCss/pace-style.css" rel="stylesheet" />-->
+
     <!--Modal window-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="Content/CustomCss/style.css" rel="stylesheet" />
     <script src="Scripts/modernizr-2.8.3.js"></script>
+    <link rel="icon" type="image/png" href="../Images/faviconNinja.png">
 
     <!--Profile Page-->
     <link href="Content/CustomCss/user-profile-style.css" rel="stylesheet" />
@@ -29,6 +29,7 @@
 
 </head>
 <body>
+    <br />
     <div id="wrapper">
         <div id="navbar">
             <input type="image" src="Images/cloud button.png" alt="Home" id="home-btn" />
