--- a/DateFirst.Web/index.html
+++ b/DateFirst.Web/index.html
@@ -33,13 +33,13 @@
     <div id="wrapper">
         <div id="navbar">
             <input type="image" src="Images/cloud button.png" alt="Home" id="home-btn" />
-            <input type="image" src="Images/cloud button profile.png" alt="Home" id="profile-btn" />
+            <input type="image" src="Images/cloud button profile.png" alt="Profile" id="profile-btn" />
             <ul class="nav navbar-nav navbar-right">
-                <li id="sign-in-container" class="login-containers">
-                    <a href="#/" data-toggle="modal" data-target="#login-modal"><b>> Login</b></a>
+                <li id="sign-in-container">
+                    <input type="image" src="Images/login-btn.png" alt="Login" id="login-btn" data-toggle="modal" data-target="#login-modal" />
                 </li>
-                <li id="register-container" class="login-containers">
-                    <a href="#/" data-toggle="modal" data-target="#register-modal"><b>> Register</b></a>
+                <li id="register-container">
+                    <input type="image" src="Images/register-btn.png" alt="Register" id="register-btn" data-toggle="modal" data-target="#register-modal" />
                 </li>
                 <li class="logout-container">
                     <div class="dropdown" id="user-dropdown">
