JS code cleanup, added helpers.

--- a/DateFirst.Web/index.html
+++ b/DateFirst.Web/index.html
@@ -80,7 +80,6 @@
                                 </div>
 
                                 <a href="#" class="btn modal-login-btn" id="sign-in-btn">Login</a>
-                                <!--<a href="#" class="login-link text-center">Lost your password?</a>-->
                             </div>
                         </div>
                         <div class="clearfix"></div>
@@ -92,6 +91,7 @@
             </div>
         </div>
         <!--Modal Window Login End-->
+
         <!--Modal Window Register Start-->
         <div class="modal fade" id="register-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
@@ -136,6 +136,7 @@
             </div>
         </div>
         <!--Modal Window Register End-->
+
         <div id="content">
 
         </div>
@@ -144,19 +145,23 @@
         <!--<div id="footer">
             Footer Here
         </div>-->
+
         <!-- Image Gallery scripts -->
-        <!--<script src="Scripts/bootstrap-image-gallery.min.js"></script>-->
         <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
 
         <!-- App scripts -->
+        <script src="Scripts/Helpers/constants.js"></script>
+        <script src="Scripts/Helpers/enumerations.js"></script>
+        <script src="Scripts/Helpers/modelHelpers.js"></script>>
         <script src="Scripts/Controllers/homeController.js"></script>
         <script src="Scripts/Controllers/usersController.js"></script>
-        <script src="Scripts/Controllers/uploadFileController.js"></script>
         <script src="Scripts/App/jsonRequester.js"></script>
         <script src="Scripts/App/templates.js"></script>
         <script src="Scripts/Models/homeModel.js"></script>
         <script src="Scripts/Models/userModel.js"></script>
+        <script src="Scripts/Models/flirtModel.js"></script>
         <script src="Scripts/Models/postModel.js"></script>
+        <script src="Scripts/Models/imageModel.js"></script>
         <script src="Scripts/App/app.js"></script>
     </div>
 </body>
