UI,removed dropdown,added logout img, TODO:fix edit-profile enabled for currentuser

--- a/DateFirst.Web/index.html
+++ b/DateFirst.Web/index.html
@@ -42,16 +42,11 @@
                     <input type="image" src="Images/register-btn.png" alt="Register" id="register-btn"  />
                 </li>
                 <li class="logout-container">
-                    <div class="dropdown" id="user-dropdown">
-                        <a href="" class="dropdown-toggle" id="user-image" data-toggle="dropdown">
+                        <div id="user-image" >
                             <img id="profile-picture" src="" />
                             <div id="logged-user-name"></div>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#" id="my-profile">My Profile</a></li>
-                            <li><a href="#" id="sign-out">Logout</a></li>
-                        </ul>
-                    </div>
+                        </div>
+                    <input type="image" src="Images/logout-btn.png" alt="Logout" id="signout-cloud-btn" />
                 </li>
             </ul>
         </div>
