More js refactoring

--- a/DateFirst.Web/index.html
+++ b/DateFirst.Web/index.html
@@ -148,6 +148,7 @@
         <script src="Scripts/Helpers/constants.js"></script>
         <script src="Scripts/Helpers/enumerations.js"></script>
         <script src="Scripts/Helpers/modelHelpers.js"></script>>
+        <script src="Scripts/Helpers/controllerHelper.js"></script>
         <script src="Scripts/Controllers/homeController.js"></script>
         <script src="Scripts/Controllers/usersController.js"></script>
         <script src="Scripts/App/jsonRequester.js"></script>
